--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ iframe {
 	position: relative;
 	font-size: 20px;
 	line-height: inherit;
-	font-style: italic;
+	/*font-style: italic;*/
 	font-weight: normal;
 	padding: 10px 0 25px;
 }
@@ -693,7 +693,7 @@ iframe {
 }
 .navbar-nav {
 	font-family: "Montserrat", sans-serif;
-	font-size: 11px;
+	font-size: 16px;
 	line-height: 1.819;
 	letter-spacing: 0.05em;
 	text-transform: uppercase;
@@ -800,7 +800,8 @@ iframe {
 .navbar-logo img {
 	display: inline-block;
 	vertical-align: middle;
-	max-height: 50px;
+	width: 245px;
+	/*max-height: 50px;*/
 }
 .navbar-toggle {
 	position: relative;
@@ -894,7 +895,7 @@ iframe {
 		padding: 8px 15px 12px;
 	}
 	.header-section.floating .navbar-logo img {
-		max-height: 40px;
+		/*max-height: 40px;*/
 	}
 	.header-section.floating .navbar-toggle {
 		margin-top: 10px;
@@ -1058,7 +1059,7 @@ iframe {
 	margin-bottom: 20px;
 }
 .hero-tagline {
-	font-size: 20px;
+	font-size: 32px;
 }
 .hero-buttons {
 	margin-top: 30px;
@@ -2046,6 +2047,11 @@ iframe {
 }
 .footer-logo {
 	margin-top: 0;
+	margin-bottom: 60px;
+}
+.footer-hashtag {
+	font-weight: bold;
+	font-size: 35px;
 	margin-bottom: 60px;
 }
 .footer-socmed {
