--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ iframe {
 	position: relative;
 	font-size: 20px;
 	line-height: inherit;
-	/*font-style: italic;*/
+	font-style: italic;
 	font-weight: normal;
 	padding: 10px 0 25px;
 }
