--- a/css/style.css
+++ b/css/style.css
@@ -2229,3 +2229,14 @@ body.enable-preloader.preloader-dark #jpreLoader {
 	overflow: hidden;
 	text-align: center;
 }
+
+/* Newsbox */
+.newsbox {
+	border-top: 1px solid #eee;
+	border-bottom: 1px solid #eee;
+	padding: 15px 0;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 90%;
+	text-align: center;
+}
