--- a/css/style.css
+++ b/css/style.css
@@ -1069,6 +1069,9 @@ iframe {
 .hero-buttons {
 	margin-top: 30px;
 }
+.hero-buttons [disabled="disabled"] {
+	color: #000;
+}
 .hero-buttons > a {
 	margin: 15px 15px 0;
 }
@@ -1193,6 +1196,9 @@ iframe {
 .hero-features {
 	margin-top: 60px;
 	text-align: left;
+}
+.hero-features .lead {
+	font-size: 19px;
 }
 @media ( min-width: 992px ) {
 	.hero-features-right {
